Updated meal review display format

--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,9 @@
   <div>
     <div class="reveiws" ng-repeat="review in reviews">
       <div class="review">
-        <p><strong>Meal name:</strong></p>
-        <p>{{review.name}}</p>
-        <p>Rating:</p>
-        <p>{{review.rating}}</p>
-        <p>Details:</p>
-        <p>{{review.details}}</p>
+        <p><strong>Meal name:</strong> {{review.name}}</p>
+        <p><strong>Rating:</strong> {{review.rating}}</p>
+        <p><strong>Details:</strong> {{review.details}}</p>
       </div>
     </div>
   </div>
