--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,9 @@
   <h1>Welcome to Mealify!</h1>
   <div class="addmeal">
     <h3>Add a new meal</h3>
-    <p>Meal name:</p>
-    <input ng-model="meal.name" type="text"> {{meal.name}}
-    <p>Rating:</p>
-    <input ng-model="meal.rating" type="text"> {{meal.rating}}
-    <p>Details:</p>
-    <input ng-model="meal.details" type="text"> {{meal.details}}
+    <p>Meal name:  <input ng-model="meal.name" type="text"> {{meal.name}}</p>
+    <p>Rating: <input ng-model="meal.rating" type="text"> {{meal.rating}}</p>
+    <p>Details: <input ng-model="meal.details" type="text"> {{meal.details}}</p>
     <br>
     <button ng-click="addReview()">Submit Review!</button>
   </div>
