Client is showing mock data sent from server

--- a/public/index.html
+++ b/public/index.html
@@ -33,5 +33,6 @@
   <script src="./app/mealify.js"></script>
   <script src="./app/controllers/addmeal.js"></script>
   <script src="./app/controllers/meals.js"></script>
+  <script src="./app/services/apidata.js"></script>
 </body>
 </html>
