Meals can now be posted to db via button click

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 </head>
 <body ng-controller="ReviewsCtrl">
   <h1>Welcome to Mealify!</h1>
-  <div class="addmeal" ng-controller="AddMealCtrl">
+  <div class="addmeal">
     <h3>Add a new meal</h3>
     <p>Meal name:  <input ng-model="meal.name" type="text"> {{meal.name}}</p>
     <p>Rating: <input ng-model="meal.rating" type="text"> {{meal.rating}}</p>
     <p>Details: <input ng-model="meal.details" type="text"> {{meal.details}}</p>
     <br>
-    <button ng-click="addReview()">Submit Review!</button>
+    <button ng-click="addReview(meal)">Submit Review!</button>
   </div>
 
 
@@ -31,7 +31,7 @@
 
   <script src="./../node_modules/angular/angular.js"></script>
   <script src="./app/mealify.js"></script>
-  <script src="./app/controllers/addmeal.js"></script>
+  <!-- <script src="./app/controllers/addmeal.js"></script> -->
   <script src="./app/controllers/meals.js"></script>
   <script src="./app/services/apidata.js"></script>
 </body>
